# Zhuo-RM-vision

./: .gitignore  AMD_780M_OPTIMIZATION_REPORT.md  BACKEND_OPTIMIZATION.md  COMPLETION_CHECKLIST.md  DETECTION_ADJUSTMENT_COMPLETE.md  DETECTION_PARAMS_ADJUSTMENT.md  Dockerfile  Dockerfile.nvidia  FPS_OPTIMIZATION_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_COMPLETE_V2.md  OPTIMIZATION_README.md  PERFORMANCE_OPTIMIZATION.md  PORTABLE_SOLUTION.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  QUICKSTART_AMD780M.md  QUICKSTART_OPTIMIZED.md  QUICK_REFERENCE.txt  README.md  README_NEW.md  README_SLAM.md  ROS2_STATUS.md  TEST_REPORT_P100R.md  TOOLS_GUIDE.md  TROUBLESHOOTING.md  berxel-usb.rules  berxel_camera.py  berxel_person_detect.py  berxel_set_env.sh  berxel_wrapper.cpp  compare_versions.py  demo_portable.sh  depth_slam_obstacle.py  docker-compose.yml  fix_camera_permission.sh  install.sh  install_accelerated_backends.sh  person_detect.py  (+20 more)
Common/: BerxelCommonFunc.cpp  BerxelCommonFunc.h  BerxelImageRender.h
HawkColor/: Makefile
HawkColorDoubleDevice/: main.cpp
HawkDepth/: Makefile  main.cpp
HawkDepthDoubleDevice/: Makefile
HawkIr/: Makefile
HawkLightIr/: Makefile  main.cpp
HawkMixColorDepth/: Makefile  main.cpp
HawkMixColorDepthDoubleDevice/: main.cpp.back_doubleDepth
HawkMixColorDepthMatting/: Makefile
HawkMixHDColorDepth/: Makefile
HawkNetDeviceInfo/: README.MD
Include/: BerxelHawkContext.h  BerxelHawkDefines.h  BerxelHawkDevice.h  BerxelHawkFrame.h
RosSDKNode/berxel_camera_ros1/berxel_camera/: CMakeLists.txt  README.md  README_EN.md  package.xml
RosSDKNode/berxel_camera_ros1/berxel_camera/config/: berxel_camera.cfg
RosSDKNode/berxel_camera_ros1/berxel_camera/include/: BerxelHawkCamera.h
RosSDKNode/berxel_camera_ros1/berxel_camera/launch/: berxel_camera.launch  berxel_camera_multi_device.launch
RosSDKNode/berxel_camera_ros1/berxel_camera/launch/include/: berxel_camera_iHawk070.launch.xml  berxel_camera_iHawk071.launch.xml  berxel_camera_iHawk100.launch.xml  berxel_camera_iHawk100E.launch.xml  berxel_camera_iHawk100K.launch.xml  berxel_camera_iHawk100M.launch.xml  berxel_camera_iHawk100Q.launch.xml  berxel_camera_iHawk100Q1.launch.xml  berxel_camera_iHawk100R.launch.xml  berxel_camera_iHawk100_remove_back_cover.launch.xml  berxel_camera_iHawk137.launch.xml
RosSDKNode/berxel_camera_ros1/berxel_camera/rviz/: berxel_default.rviz
RosSDKNode/berxel_camera_ros1/berxel_camera/src/: BerxelHawkCamera.cpp  BerxelRebotCamera.cpp
RosSDKNode/berxel_camera_ros1/berxel_camera/srv/: berxel_camera_image.srv
RosSDKNode/berxel_camera_ros1/berxel_description/launch/: berxel_iHawk070.launch  berxel_iHawk100R.launch
RosSDKNode/berxel_camera_ros1/berxel_description/meshes/: BerxelHawk070.stl  BerxelHawk100R.stl
RosSDKNode/berxel_camera_ros1/berxel_description/urdf/: _iHawk070.urdf.xacro  _iHawk100R.urdf.xacro  test_iHawk070_camera.urdf.xacro  test_iHawk100R_camera.urdf.xacro
RosSDKNode/berxel_camera_ros2/config/: berxel_ihawk_100E.yaml  berxel_ihawk_100K.yaml  berxel_ihawk_100M.yaml  berxel_ihawk_100Q.yaml  berxel_ihawk_137.yaml  test.yaml
RosSDKNode/berxel_camera_ros2/include/: berxel_camera_ros2_define.h
RosSDKNode/berxel_camera_ros2/rviz/: berxel_default.rviz
RosSDKNode/berxel_camera_ros2/src/: berxel_camera_ros2_driver.cpp
ros2_ws/: run_detector.sh
ros2_ws/src/berxel_camera_ros2.bak/: CMakeLists.txt  README.MD  README_EN.MD  package.xml
ros2_ws/src/berxel_camera_ros2.bak/config/: berxel_ihawk_100.yaml  berxel_ihawk_100R.yaml  berxel_ihawk_100_remove_back_cover.yaml
ros2_ws/src/berxel_camera_ros2.bak/include/: berxel_camera_ros2_driver.h
ros2_ws/src/berxel_camera_ros2.bak/launch/: berxel_camera_iHawk100.py  berxel_camera_multi_launch.py  test.py
ros2_ws/src/berxel_camera_ros2.bak/src/: berxel_camera_ros2_node.cpp
ros2_ws/src/person_detector/: README.md  package.xml  setup.py
ros2_ws/src/person_detector/launch/: person_detector.launch.py
ros2_ws/src/person_detector/person_detector/: __init__.py  berxel_camera.py  byte_tracker.py  detector_node.py  performance_detector_node.py  person_detector_node.py  test_listener.py
ros2_ws/src/person_detector/resource/: person_detector
ros2_ws/src/person_detector_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/person_detector_msgs/msg/: PersonDetection.msg  PersonDetectionArray.msg
samples/src/: Makefile  Rules.mk
samples/src/Common/: BerxelImageRender.cpp
samples/src/HawkColor/: main.cpp  main.cpp.bak_C
samples/src/HawkColorDoubleDevice/: Makefile
samples/src/HawkDepth/: main_多设备.cpp
samples/src/HawkDepthDoubleDevice/: main.cpp
samples/src/HawkIr/: main.cpp
samples/src/HawkMixColorDepthDoubleDevice/: Makefile  main.cpp
samples/src/HawkMixColorDepthMatting/: main.cpp
samples/src/HawkMixHDColorDepth/: main.cpp
samples/src/HawkNetDeviceInfo/: Makefile  main.cpp
tools/: benchmark_engines.py  benchmark_openvino.py  export_to_onnx.py  onnx_to_tensorrt.py
